--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
       "axios": "axios/dist/node/axios.cjs"
     }
   },
+  "homepage": "https://nikizak34.github.io/task-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/uuid": "^9.0.1",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -35,6 +37,8 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
